--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -321,9 +321,7 @@
                     *ngIf="job.minimum_skills; else noSkills">
                     <div class="skills-preferred-m" *ngFor="let min_skill of job.minimum_skills ">
                       <simple-tag type="gray" title="{{min_skill.skill}}" ellipseTag="true"
-                        value="{{min_skill.skill_level}}"
-                        [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
-                        [matTooltipShowDelay]=500 (click)="openSkilladdDialog(min_skill)">
+                        value="{{min_skill.skill_level}}" (click)="openSkilladdDialog(min_skill)">
                       </simple-tag>
 
                     </div>
@@ -339,9 +337,7 @@
                     *ngIf="job.preferred_skills; else noSkills">
                     <div class="skills-preferred-m skill-prefer" *ngFor="let preskill of job.preferred_skills">
                       <simple-tag type="gray" title="{{preskill.skill}}" ellipseTag="true"
-                        value="{{preskill.skill_level}}"
-                        [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
-                        [matTooltipShowDelay]=500 (click)="openSkilladdDialog(preskill)">
+                        value="{{preskill.skill_level}}" (click)="openSkilladdDialog(preskill)">
                       </simple-tag>
                     </div>
                   </div>
