--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -113,6 +113,12 @@
       </div>
       <div class="profile-form__field">
         <mat-form-field class="bg-transparent" appearance="fill">
+          <mat-label>Department</mat-label>
+          <input matInput placeholder="Department" type="text" formControlName="position_department">
+        </mat-form-field>
+      </div>
+      <div class="profile-form__field">
+        <mat-form-field class="bg-transparent" appearance="fill">
           <mat-label>Position Level *</mat-label>
           <mat-select formControlName="position_level">
             <mat-option *ngFor="let positionLevel of positionLevels" value="{{positionLevel}}">{{positionLevel}}</mat-option>
@@ -522,8 +528,8 @@
           <p>{{position_application_deadline ? position_application_deadline : 'N/A'}}</p>
         </div>
         <div class="position-info">
-          <label>Education Level Required</label>
-          <p>{{preferred_education_levels && preferred_education_levels.length > 0 ? preferred_education_levels[0].education_level : 'N/A'}}</p>
+          <label>Department</label>
+          <p>{{position_department ? position_department : 'N/A'}}</p>
         </div>
       </div>
 		</div>
