--- a/client/src/app/pages/chat/chat-viewer/chat-viewer.component.html
+++ b/client/src/app/pages/chat/chat-viewer/chat-viewer.component.html
@@ -1,7 +1,3 @@
-<!-- <p>chat-viewer works!</p>
-
-<button (click)="demoAdd()"> Demo Add </button> -->
-
 <div class="chat-input">
     <mat-form-field appearance="fill">
         <mat-label>Chat Id</mat-label>
@@ -9,18 +5,15 @@
     </mat-form-field>
     <action-button type="raised" title="Join" color="primary" (click)="joinRoom()"></action-button>
     <action-button type="raised" title="Create" color="primary" (click)="createRoom()"></action-button>
+    <!-- <span>{{chatId}}</span> -->
 </div>
 
 <main autocomplete="off" *ngIf="chatRoom$ | async as chat">
     <div class="chat">
         <div class="msg" *ngFor="let msg of chat.messages; trackBy: trackByCreated">
 
-            <!-- <div class="user">
-                <img [src]="msg.user?.photoURL">
-                <div>{{ msg.user?.displayName }}</div>
-            </div> -->
-            <p> json : {{msg | json }}</p>
-            <p>{{msg.user.first_name}}:{{ msg.content }}</p>
+            <!-- <p> json : {{msg | json }}</p> -->
+            <p> <img [src]="msg.user?.photo"> <b>{{msg.user.first_name}}</b>:{{ msg.content }}</p>
 
         </div>
     </div>
