bulk unsave job functionality is added.

--- a/client/src/app/pages/saved-jobs/saved-jobs.component.html
+++ b/client/src/app/pages/saved-jobs/saved-jobs.component.html
@@ -191,6 +191,9 @@
           <action-button class="position-search-reload-result" color="primary" title="Apply Selected"
             (click)="applySelected()">
           </action-button>
+          <action-button class="position-search-reload-result" color="primary" title="Unsave Job"
+            (click)="unSaveSelected()">
+          </action-button>
           <action-button class="position-search-reload-result" color="primary" title="Reload Results"
             (click)="reloadResult()"></action-button>
           <div class="drop-buttons">
@@ -199,6 +202,7 @@
               </button>
               <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="applySelected()">Apply Selected</button>
+                <button mat-menu-item (click)="unSaveSelected()">Unsave Job</button>
                 <button mat-menu-item (click)="reloadResult()">Reload Results</button>
               </mat-menu>
             </span>
